--- a/api/game_configurations/loops.yaml
+++ b/api/game_configurations/loops.yaml
@@ -21,7 +21,7 @@ games:
         <li>Ending condition: set the limit on the counter variable</li>
         <li>Assignment: set how the counter variable will change between each iteration</li>
       </ol>
-      In blockly this kind of structure exists in the <strong>Count with</strong> block.
+      In Blockly this is done using a <strong>Count with</strong> block.
 
       <pre class="code">
       <code>
@@ -45,6 +45,8 @@ games:
       Experiment with the <strong>Count With</strong> block so you understand how it works and how to use it. We have
       provided you with arithmetic and if statement code blocks so you can experiment with using different types of code
       in your for loops.
+      <br>
+      <strong>Instructions</strong>
       <br>
       When you understand how for loops work, print out every integer between 0 and the input value.
     blocks:
@@ -76,6 +78,8 @@ games:
       <br>
       Given a positive integer, output out <strong>only</strong> the even numbers sequentially from 0 up until the number given.
       <br>
+      <strong>Instructions</strong>
+      <br>
       For example, given the number 12 you would output 0, 2, 4, 6, 8, 10, and 12.
     blocks:
       - variable
@@ -103,6 +107,8 @@ games:
       1, 2, Fizz, 4, Buzz, Fizz, 7, 8, Fizz, Buzz, 11, Fizz, 13, 14, FizzBuzz, <br>
       16, 17, Fizz, 19, Buzz, Fizz, 22, 23, Fizz, Buzz, 26, Fizz, 28, 29, FizzBuzz, <br>
       31, 32, Fizz, 34, Buzz, Fizz, ...
+      <br>
+      <strong>Instructions</strong>
       <br>
       Output the results of a FizzBuzz game from 1 up to the given input value.
     blocks:
@@ -139,6 +145,8 @@ games:
       <br>
       Experiment with the while loop and see how it responds to different conditions.
       <br>
+      <strong>Instructions</strong>
+      <br>
       When you understand how the while loop works print out all the inputs up until the first negative input (there will be at
       least one negative input in the input stream).
     blocks:
@@ -164,6 +172,8 @@ games:
         <li>Fib(1) = 1</li>
         <li>Fib(n) = Fib(n - 1) + Fib(n - 2) for all n > 1</li>
       </ul>
+      <strong>Instructions</strong>
+      <br>
       Output each element of the fibonacci sequence up until the input number.
       Don't forget to include the first 0 and 1 in your output (if applicable).
     blocks:
